<resources>
    <string name="app_name">Coronavirus</string>
    <string name="title_planner">Planner</string>
    <string name="title_fun">Fun</string>
    <string name="title_achievements">Achievements</string>
    <string name="filler_matt_s">Filler Text</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signup_btn">Sign Up</string>
    <string name= "login_btn">Log In</string>
    <string name="fun_activities_s">Fun Activities!</string>
    <string name="fun_activity_name">Fun Activity Name</string>
    <string name="fun_activity_category">Fun Activity Category</string>
    <string name="add_fun_activity">Add Fun Activity</string>
    <string name="description">Description</string>
    <string name="today_s_plans">My\ Plans</string>
    <string name="sign_out">Sign out</string>
    <string name="account">Account</string>
    <string name="completed_s">Completed</string>
    <string name="choose_date_s">Choose Date</string>
    <string name="edit_plan_item_text">Edit Plan Item</string>
    <string name="default_edit_action">Edit</string>
    <string name="default_hide_description">Hide\nDetails</string>
    <string name="default_show_description">Show\nDetails</string>
    <string name="sort_your_items">Sort Your Items!</string>
    <string name="edit_fun_activity">Edit Fun Activity</string>
    <string name="settings_s">Settings</string>
    <string name="or_s">OR</string>
    <string-array name="item_sort_order_array">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="list_sort_array">
        <item>Planner</item>
        <item>Fun</item>
    </string-array>

    <string-array name="item_sort_criteria_array_planner">
        <item>Name</item>
        <item>Category</item>
        <item>Description</item>
        <item>Completed</item>
        <item>Due Date</item>
    </string-array>

    <string-array name="item_sort_criteria_array_fun">
        <item>Category</item>
        <item>Name</item>
        <item>Description</item>
        <item>Completed</item>
    </string-array>

</resources>