<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_planner">

    <fragment
        android:id="@+id/navigation_planner"
        android:name="com.cse390.coronavirus.ui.planner.PlannerFragment"
        android:label="@string/title_planner"
        tools:layout="@layout/planner_fragment" />

    <fragment
        android:id="@+id/navigation_fun"
        android:name="com.cse390.coronavirus.ui.fun.FunFragment"
        android:label="@string/title_fun"
        tools:layout="@layout/fun_fragment"/>

    <fragment
        android:id="@+id/navigation_achievements"
        android:name="com.cse390.coronavirus.ui.achievements.AchievementsFragment"

        android:label="@string/title_achievements"
        tools:layout="@layout/achievements_fragment"/>
    <fragment
        android:id="@+id/navigation_settings"
        android:label="Settings"
        android:name="com.cse390.coronavirus.ui.settings.SettingsFragment"
        tools:layout="@layout/settings_fragment"/>
</navigation>