<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_item_header_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_fun_activity"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/plan_subject_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/fun_activity_category"
            android:importantForAutofill="no"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#A1A1A1" />

        <EditText
            android:id="@+id/plan_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/fun_activity_name"
            android:importantForAutofill="no"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#A1A1A1" />

        <EditText
            android:id="@+id/description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#A1A1A1" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>