<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
    app:cardElevation="15dp"
    app:cardCornerRadius="10dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
   >

        <TextView
            android:id="@+id/category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_matt_s"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_toEndOf="@id/category_tv"
            android:text="@string/filler_matt_s"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/due_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_tv"
            android:layout_marginStart="58dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/category_tv"
            android:text="@string/filler_matt_s"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/completed_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/due_date_tv"
            android:layout_marginStart="52dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/category_tv"
            android:clickable="true"
            android:paddingLeft="0dp"
            android:singleLine="true"
            android:text="@string/completed_s"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:text="@string/filler_matt_s"
            android:layout_below="@id/category_tv"
            android:textSize="15sp"
            android:textAppearance="?attr/textAppearanceListItem" />


   </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">
        <Button
            android:id="@+id/edit_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/default_edit_action" />
        <Button
            android:id="@+id/hide_description_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_below="@id/edit_item_button"
            android:text="@string/default_hide_description" />
    </RelativeLayout>






</androidx.cardview.widget.CardView>