<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
    app:cardElevation="15dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plan_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/filler_matt_s"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/subject_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/filler_matt_s"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/completedf_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="0"
                android:clickable="true"
                android:singleLine="true"
                android:text="@string/completed_s"
                android:textSize="15sp" />

            <Button
                android:id="@+id/edit_item_button_fun"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_edit_action"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/descf_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/filler_matt_s"
                android:textAlignment="viewStart"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="15sp" />

            <Button
                android:id="@+id/hide_description_button_fun"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="0"
                android:text="@string/default_hide_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

